compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__bit_array_overlapping_redundant_patterns_with_variable_size_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1663
expression: "pub fn main() {\n  let bit_array = <<>>\n  case bit_array {\n    <<len, _:size(len)-unit(3)>> -> 1\n    <<len, _:size(len)-unit(2), 1:size(len)>> -> 2\n    _ -> 2\n  }\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  let bit_array = <<>>
  case bit_array {
    <<len, _:size(len)-unit(3)>> -> 1
    <<len, _:size(len)-unit(2), 1:size(len)>> -> 2
    _ -> 2
  }
}

----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:5:5
  │
5 │     <<len, _:size(len)-unit(2), 1:size(len)>> -> 2
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
