compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__case_error_prints_aliased_unqualified_value.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1143
expression: "\nimport wibble.{Wibble, Wobble as Wubble}\npub fn main(wibble) {\n    case wibble {\n        Wibble -> Nil\n    }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam
pub type Wibble { Wibble Wobble }

-- main.gleam

import wibble.{Wibble, Wobble as Wubble}
pub fn main(wibble) {
    case wibble {
        Wibble -> Nil
    }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:4:5
  │  
4 │ ╭     case wibble {
5 │ │         Wibble -> Nil
6 │ │     }
  │ ╰─────^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Wubble
