compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__case_error_prints_module_names.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1097
expression: "\nimport wibble\npub type Things { Thing1 Thing2(Int) }\npub fn main(wobble_thing) {\n    case wobble_thing {\n        #(wibble.Wibble, Thing1) -> Nil\n    }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam
pub type Wibble { Wibble Wobble }

-- main.gleam

import wibble
pub type Things { Thing1 Thing2(Int) }
pub fn main(wobble_thing) {
    case wobble_thing {
        #(wibble.Wibble, Thing1) -> Nil
    }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:5:5
  │  
5 │ ╭     case wobble_thing {
6 │ │         #(wibble.Wibble, Thing1) -> Nil
7 │ │     }
  │ ╰─────^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    #(wibble.Wibble, Thing2(_))
    #(wibble.Wobble, _)
